Date Input added

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/geolib": "^2.0.23",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "flatpickr": "^4.6.13",
     "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-flatpickr": "^3.10.13",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-flatpickr": "^3.8.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
