--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
