--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "@types/geolib": "^2.0.23",
     "@vercel/kv": "^3.0.0",
     "axios": "^1.7.7",
