--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.45.4",
     "@types/geolib": "^2.0.23",
     "@vercel/kv": "^3.0.0",
