--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.2.11",
+    "posthog-js": "^1.167.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
