--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
     "react-leaflet": "^4.2.1",
+    "react-tooltip": "^5.28.0",
     "resend": "^4.0.0"
   },
   "devDependencies": {
