--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18",
     "@types/react-flatpickr": "^3.8.11",
+    "daisyui": "^4.12.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
