--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
-    "@stripe/stripe-js": "^4.8.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "@supabase/supabase-js": "^2.45.4",
     "@types/geolib": "^2.0.23",
     "@vercel/kv": "^3.0.0",
@@ -29,7 +30,7 @@
     "react-leaflet": "^4.2.1",
     "react-tooltip": "^5.28.0",
     "resend": "^4.0.0",
-    "stripe": "^17.2.0"
+    "stripe": "^17.2.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
