--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "update-types": "npx supabase gen types typescript --project-id lnqtozhericysmxlstuh > types/supabase-types.ts"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
@@ -18,20 +21,27 @@
     "@vercel/kv": "^3.0.0",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "flatpickr": "^4.6.13",
     "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "lucide-react": "^0.454.0",
     "next": "^14.2.11",
     "posthog-js": "^1.167.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
     "react-leaflet": "^4.2.1",
     "react-tooltip": "^5.28.0",
     "resend": "^4.0.0",
-    "stripe": "^17.2.1"
+    "stripe": "^17.2.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
