--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-tooltip": "^5.28.0",
     "resend": "^4.0.0",
     "stripe": "^17.2.1",
+    "supabase": "^2.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
